EDIT: item decorator

--- a/app/src/main/res/layout/fragment_liked_posts.xml
+++ b/app/src/main/res/layout/fragment_liked_posts.xml
@@ -4,11 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.LikedPostsFragment">
+
     <RelativeLayout
         android:id="@+id/rl_no_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/group"
@@ -28,5 +30,12 @@
             app:custom_font="RobotoRegular" />
 
     </RelativeLayout>
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rec_view_liked_posts"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 
 </RelativeLayout>
