--- a/app/src/main/res/layout/item_liked_post.xml
+++ b/app/src/main/res/layout/item_liked_post.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="118dp"
+    android:layout_height="118dp"
+    android:orientation="vertical">
 
-</LinearLayout>
+    <ImageView
+        android:layout_width="118dp"
+        android:layout_height="118dp"
+        android:background="@color/gray_dark"
+        android:src="@drawable/stub_image" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_margin="5dp"
+        android:src="@drawable/gif" />
+
+</RelativeLayout>
