--- a/app/src/main/res/layout/activity_best_comments.xml
+++ b/app/src/main/res/layout/activity_best_comments.xml
@@ -76,5 +76,10 @@
             android:layout_height="match_parent"
             android:layout_below="@+id/tabs" />
 
+        <include layout="@layout/item_chat_field"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"/>
+
     </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
