added setting button to toolbar on BestCommentsActivity.java changed lines height to 0.5dp

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -44,6 +44,7 @@
     <dimen name="size_add_profile_photo">20dp</dimen>
 
     <dimen name="tab_comments_height">24dp</dimen>
+    <dimen name="line_height">0.5dp</dimen>
 
 
 
