--- a/app/src/main/res/drawable/rectangular_shape_active.xml
+++ b/app/src/main/res/drawable/rectangular_shape_active.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#F5F5F5"/>
 
-    <stroke android:width="1dp"
+    <stroke android:width="@dimen/line_height"
         android:color="#E0E0E0" />
 
 </shape>
