--- a/app/src/main/res/layout/item_hash_tag.xml
+++ b/app/src/main/res/layout/item_hash_tag.xml
@@ -48,7 +48,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="@dimen/line_height"
                 android:layout_alignParentBottom="true"
                 android:layout_marginEnd="@dimen/spacing_large"
                 android:background="@color/divider_color" />
