--- a/app/src/main/res/layout/item_chat_input_field.xml
+++ b/app/src/main/res/layout/item_chat_input_field.xml
@@ -7,7 +7,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/line_height"
         android:layout_alignParentTop="true"
         android:background="#E0E0E0" />
 
