--- a/app/src/main/res/layout/activity_all_comment.xml
+++ b/app/src/main/res/layout/activity_all_comment.xml
@@ -32,8 +32,18 @@
             android:id="@+id/content_comments"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_above="@+id/chat_field"
             android:layout_below="@+id/app_bar" />
 
+        <include
+            android:id="@+id/chat_field"
+            layout="@layout/item_chat_input_field"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom" />
+
     </RelativeLayout>
+
 
 </android.support.design.widget.CoordinatorLayout>
