added sliding up panel for sharing

--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -109,7 +109,7 @@
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/iv_btn_more"
+            android:id="@+id/iv_btn_share"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
