--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -45,7 +45,7 @@
 
     <dimen name="tab_comments_height">24dp</dimen>
     <dimen name="line_height">0.5dp</dimen>
-
+    <dimen name="sliding_share_panel_height">138dp</dimen>
 
 
     <dimen name="tool_bar_size">112dp</dimen>
