--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/post_image_height"
         android:scaleType="fitXY"
+        android:background="?attr/selectableItemBackground"
         android:src="@drawable/stub_image" />
 
     <RelativeLayout
