--- a/app/src/main/res/layout/activity_best_comments.xml
+++ b/app/src/main/res/layout/activity_best_comments.xml
@@ -20,12 +20,13 @@
             android:layout_height="wrap_content"
             app:contentScrim="@color/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
+            
             <include
                 android:id="@+id/layout_post"
-                layout="@layout/item_post"
+                layout="@layout/item_app_bar_view_pager"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
                 app:layout_collapseMode="parallax" />
 
             <android.support.v7.widget.Toolbar
