--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,19 +44,33 @@
                     android:layout_height="wrap_content"
                     android:visibility="gone" />
 
-
-                <android.support.design.widget.TabLayout
-                    android:id="@+id/sliding_tabs"
-                    style="@style/MyCustomTextAppearance"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:layout_below="@+id/toolbar"
-                    android:background="@color/colorPrimary"
-                    app:tabGravity="fill"
-                    app:tabIndicatorHeight="4dp"
-                    app:tabMode="fixed" />
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/toolbar">
 
+                    <android.support.design.widget.TabLayout
+                        android:id="@+id/sliding_tabs"
+                        style="@style/MyCustomTextAppearance"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        android:background="@color/colorPrimary"
+                        app:tabGravity="fill"
+                        android:layout_toStartOf="@+id/settings"
+                        app:tabIndicatorHeight="4dp"
+                        app:tabMode="fixed" />
 
+                    <ImageButton
+                        android:id="@+id/settings"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:background="?attr/selectableItemBackground"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentEnd="true"
+                        android:padding="@dimen/spacing_normal"
+                        android:src="@drawable/settings" />
+                </RelativeLayout>
             </android.support.v7.widget.Toolbar>
 
             <RelativeLayout
