--- a/app/src/main/res/layout/activity_best_comments.xml
+++ b/app/src/main/res/layout/activity_best_comments.xml
@@ -25,6 +25,7 @@
                 android:id="@+id/layout_post"
                 layout="@layout/item_app_bar_view_pager"
                 android:layout_width="match_parent"
+                android:layout_marginTop="?attr/actionBarSize"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 app:layout_collapseMode="parallax" />
