--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -16,7 +16,7 @@
         layout="@layout/item_like_comment_share"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/spacing_large"
-        android:layout_below="@+id/iv_post_image" />
+        android:layout_below="@+id/iv_post_image"
+        android:layout_marginBottom="@dimen/spacing_large" />
 
 </RelativeLayout>
