--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.www.funone.activities.CameraActivity">
+    tools:context=".camera.CameraActivity">
 
     <FrameLayout
         android:id="@+id/content_camera"
