--- a/app/src/main/res/layout/fragment_native_camera.xml
+++ b/app/src/main/res/layout/fragment_native_camera.xml
@@ -30,8 +30,7 @@
     <FrameLayout
         android:id="@+id/camera_preview"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="1" />
+        android:layout_height="fill_parent" />
 
 
     <RelativeLayout
